examples/bad/unknown_identifier4.latf
int main() {
    int x = x; // error - unknown identifier

    return 0;
}